--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module">
+      /**
+       * @dfinity/agent requires this. Can be removed once it's fixed
+       */
+      import { Buffer } from "buffer"
+    
+      window.global = window
+      window.Buffer = Buffer
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
